Assignment Front End Design Completed -- javascript had some issues in upload document after upload document name is not showing

--- a/Teacher_View/MainDiv4.css
+++ b/Teacher_View/MainDiv4.css
@@ -1,5 +1,5 @@
 .MainDiv4{
-    display: block;
+    display: none;
 }
 .attandDiv-btn-container{
     display: flex;
